--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: scornhol <scornhol@student.42.fr>          +#+  +:+       +#+         #
+#    By: schung <schung@student.21-school.ru>       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2021/10/13 19:58:58 by scornhol          #+#    #+#              #
-#    Updated: 2022/07/01 21:03:22 by scornhol         ###   ########.fr        #
+#    Created: 2022/09/24 19:27:11 by schung            #+#    #+#              #
+#    Updated: 2022/09/24 19:27:12 by schung           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
